@startuml

title __V3's Class Diagram__\n

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        class com.itbird.design.principle.imageloader.v3.DiskCache {
            - TAG : String
            - mRootDir : File
            + getCache()
            + init()
            + putCache()
            + removeCache()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        interface com.itbird.design.principle.imageloader.v3.ICache {
            {abstract} + getCache()
            {abstract} + init()
            {abstract} + putCache()
            {abstract} + removeCache()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        class com.itbird.design.principle.imageloader.v3.ImageDownload {
            - TAG : String
            - mExecutor : ExecutorService
            - mHandler : Handler
            + ImageDownload()
            + downloadImage()
            - downloadUrlBitmap()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        interface com.itbird.design.principle.imageloader.v3.ImageDownload.DownloadCallback {
            {abstract} + downloadSuccess()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        class com.itbird.design.principle.imageloader.v3.ImageLoader {
            {static} - TAG : String
            - mDefaultCache : ICache<Bitmap>
            {static} - mInstance : ImageLoader
            + downloadSuccess()
            {static} + getInstance()
            + setImageCache()
            + setImageView()
            - ImageLoader()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v3 {
        class com.itbird.design.principle.imageloader.v3.MemoryCache {
            - mImageCache : LruCache<String, Bitmap>
            + getCache()
            + init()
            + putCache()
            + removeCache()
        }
      }
    }
  }
  

  com.itbird.design.principle.imageloader.v3.DiskCache .up.|> com.itbird.design.principle.imageloader.v3.ICache
  com.itbird.design.principle.imageloader.v3.ImageDownload o-- com.itbird.design.principle.imageloader.v3.ImageDownload.DownloadCallback : mDownloadCallback
  com.itbird.design.principle.imageloader.v3.ImageDownload +-down- com.itbird.design.principle.imageloader.v3.ImageDownload.DownloadCallback
  com.itbird.design.principle.imageloader.v3.ImageLoader .up.|> com.itbird.design.principle.imageloader.v3.ImageDownload.DownloadCallback
  com.itbird.design.principle.imageloader.v3.ImageLoader o-- com.itbird.design.principle.imageloader.v3.ICache : mImageCache
  com.itbird.design.principle.imageloader.v3.ImageLoader o-- com.itbird.design.principle.imageloader.v3.ImageDownload : mImageDownload
  com.itbird.design.principle.imageloader.v3.MemoryCache .up.|> com.itbird.design.principle.imageloader.v3.ICache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
